# Titan-AGI

./: CMakeLists.txt  README.md
3rd/nlohmann_json/: .gitignore  README.md  get_version.sh
include/hal/: hardware_drivers.h  tts_engine.h
include/titan/agent/: action_manager.h  behavior_arbiter.h  executive_system.h  multi_task_executive.h  strategic_planner.h  task_types.h  titan_agent.h
include/titan/cognition/: object_cognition.h  scene_memory.h
include/titan/control/: fep_controller.h
include/titan/core/: math_utils.h  ring_buffer.h  types.h
include/titan/learning/: strategy_optimizer.h
include/titan/memory/: cognitive_stream.h  entity_memory_manager.h  memory_types.h  sparse_gp_memory.h
include/titan/perception/: attention_engine.h  perception_system.h
src/: main.cpp
src/agent/: titan_agent.cpp
src/control/: fep_controller.cpp
src/hal/: tts_engine.cpp
src/memory/: sparse_gp_memory.cpp
src/perception/: perception_system.cpp
